force-app/main/default/objects/FOT_S3_Credentials__mdt/FOT_S3_Credentials__mdt.object-meta.xml
<CustomObject>
    <label>FOT S3 Credentials</label>
    <pluralLabel>FOT S3 Credentials</pluralLabel>
</CustomObject>