force-app/main/default/objects/FOT_S3_Credentials__mdt/fields/FOT_Host__c.field-meta.xml
<CustomField>
    <fullName>FOT_Host__c</fullName>
    <label>Host</label>
    <length>128</length>
    <type>Text</type>
</CustomField>