force-app/main/default/objects/FOT_S3_Credentials__mdt/fields/FOT_S3_Access_Key__c.field-meta.xml
<CustomField>
    <fullName>FOT_S3_Access_Key__c</fullName>
    <label>Access Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>