force-app/main/default/objects/FOT_S3_Credentials__mdt/fields/FOT_View_S3_File_Duration__c.field-meta.xml
<CustomField>
    <fullName>FOT_View_S3_File_Duration__c</fullName>
    <label>View S3 File Duration</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>